语法优化